--- a/templates/article/post_details.html.twig
+++ b/templates/article/post_details.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'chefbase.html.twig' %}
 
 {% block title %}Article
 {% endblock %}
@@ -21,52 +21,36 @@
 							</li>
 							<li>
 								<i class="bx bx-calendar"></i>
-								{{ article.datePublished ? article.datePublished|date('Y-m-d H:i:s') : '' }}</li>
+								{{ article.datePublished ? article.datePublished|date('Y-m-d H:i:s') : '' }}
+							</li>
 							<li>
 								<i class="bx bx-comment-dots"></i>
 								{{commentsCount}}
-								comments</li>
+								comments
+							</li>
+							<li>
+								{% if isLikedByCurrentUser %}
+									<div onclick="disLike()">
+										<svg id="likeIcon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewbox="0 0 16 16">
+											<path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+										</svg>
+									</div>
+								{% else %}
+									<div onclick="like()">
+										<svg id="dislikeIcon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewbox="0 0 16 16">
+											<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+										</svg>
+									</div>
+								{% endif %}
+							</li>
+							<li>
+								<span class="likes-count">{{article.nbLikesArticle}}</span>
+								likes
+							</li>
 						</ul>
 						<h2>{{article.titleArticle}}</h2>
 						<p>{{article.descriptionArticle}}</p>
-
-						<div class="article-share">
-							<div class="row align-items-center">
-								<div class="col-lg-5 col-md-5">
-									<div class="article-tag">
-										<ul>
-											<li class="title">Tags :</li>
-											<li>
-												<a href="blog-details.html" target="_blank">Health,</a>
-											</li>
-											<li>
-												<a href="blog-details.html" target="_blank">Food,</a>
-											</li>
-											<li>
-												<a href="blog-details.html" target="_blank">Nutrition</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-lg-7 col-md-7">
-									<div class="article-social-icon">
-										<ul class="social-icon">
-											<li class="title">Share :</li>
-											<li>
-												<a href="https://www.facebook.com/" target="_blank">
-													<i class="bx bxl-facebook"></i>
-												</a>
-											</li>
-											<li>
-												<a href="https://www.instagram.com/" target="_blank">
-													<i class="bx bxl-instagram"></i>
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
+						<br/>
 						<div class="comments-wrap">
 							<div class="comment-title">
 								<h4>{{commentsCount}}
@@ -79,113 +63,14 @@
 							</ul>
 						</div>
 						<div class="comments-form">
-							<div class="contact-form">
-								<h4>Leave A Reply</h4>
-								<form id="contactForm">
-									<div class="row">
-										<div class="col-lg-12 col-md-12">
-											<div class="form-group">
-												<label>Comment*</label>
-												<textarea name="message" class="form-control" id="message" cols="30" rows="8" required data-error="Write your message" placeholder="Your Message.."></textarea>
-											</div>
-										</div>
-										<div class="col-lg-12 col-md-12">
-											<button type="submit" class="default-btn">
-												Post A Comment
-											</button>
-										</div>
-									</div>
-								</form>
-							</div>
+							{{ include('commentaire/newComment.html.twig') }}
 						</div>
 					</div>
 				</div>
-				{# <div class="col-lg-4">
-												            <div class="side-bar-area pl-20">
-												              <div class="search-widget">
-												                <form class="search-form">
-												                  <input
-												                    type="search"
-												                    class="form-control"
-												                    placeholder="Search..."
-												                  />
-												                  <button type="submit">
-												                    <i class="bx bx-search"></i>
-												                  </button>
-												                </form>
-												              </div>
-												              <div class="side-bar-categories">
-												                <ul>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Personalized Nutrition
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Health Nutrition
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Weight Loss Program
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Sports Nutritionist
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Child Nutritionist
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                  <li>
-												                    <a href="categories.html" target="_blank">
-												                      Workout Program
-												                      <i class="bx bx-right-arrow-alt"></i>
-												                    </a>
-												                  </li>
-												                </ul>
-												              </div>
-												              <div class="side-bar-widget">
-												                <h3 class="title">Recent Post</h3>
-												                <div class="widget-popular-post">
-												                  <article class="item">
-												                    <a href="blog-details.html" class="thumb">
-												                      <span class="full-image cover bg1" role="img"></span>
-												                    </a>
-												                    <div class="info">
-												                      <h4 class="title-text">
-												                        <a href="blog-details.html">
-												                          5 Tips For Making Delicious Food For all
-												                        </a>
-												                      </h4>
-												                      <a
-												                        href="blog-details.html"
-												                        class="read-btn"
-												                        target="_blank"
-												                        >Read More</a
-												                      >
-												                    </div>
-												                  </article>
-												                </div>
-												              </div>
-												              <div class="side-bar-widget">
-												                <h3 class="title-tag">Popular Tags</h3>
-												                <ul class="side-bar-widget-tag">
-												                  <li><a href="tags.html" target="_blank">Health</a></li>
-												                </ul>
-												              </div>
-												            </div>
-												          </div>#}
 			</div>
 		</div>
 	</div>
+{% endblock %}
+{% block js %}
+	<script src={{asset("assets/js/blog.js")}}></script>
 {% endblock %}
