--- a/templates/article/post_item.html.twig
+++ b/templates/article/post_item.html.twig
@@ -5,18 +5,21 @@
 				<img src={{ asset(article.imgArticle) }} alt="Blog Images">
 			</a>
 			<div class="tag">
-				<a href="{{ path('app_article_show', {'idArticle': article.idArticle}) }}">
+				<a>
 					{{ article.datePublished ? article.datePublished|date('Y-m-d H:i:s') : '' }}
 				</a>
 			</div>
 		</div>
 		<div class="content">
 			<h3>
-				<a href="{{ path('app_article_show', {'idArticle': article.idArticle}) }}">{{ article.titleArticle }}"
-				</a>
+				<a>{{ article.titleArticle }}</a>
 			</h3>
 			<p>{{ article.descriptionArticle }}</p>
 			<a href="{{ path('app_article_show', {'idArticle': article.idArticle}) }}" class="read-btn">Read More</a>
+			<form method="post" action="{{ path('app_article_delete', {'idArticle': article.idArticle}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+				<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.idArticle) }}">
+				<button class="btn">Delete</button>
+			</form>
 		</div>
 	</div>
 </div>
