--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -219,13 +219,32 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li class="nav-item">
-									<a href="categories.html" class="nav-link">
+									<a href="{{ path('app_article_blog')}}" class="nav-link">
 										Publications récentes
 									</a>
 								</li>
 								<li class="nav-item">
 									<a href="tags.html" class="nav-link">
 										Tags
+									</a>
+								</li>
+							</ul>
+						</li>
+
+						<li class="nav-item">
+							<a href="#" class="nav-link">
+								Nutritions
+								<i class="bx bx-chevron-down"></i>
+							</a>
+							<ul class="dropdown-menu">
+								<li class="nav-item">
+									<a href="categories.html" class="nav-link">
+										Ajouter
+									</a>
+								</li>
+								<li class="nav-item">
+									<a href="tags.html" class="nav-link">
+										Modifier
 									</a>
 								</li>
 							</ul>
