--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -464,7 +464,7 @@
 							</a>
 							<ul class="submenu">
 								<li><a href="{{ path('admin_user_nutrition_index') }}">Liste</a></li>
-								<li><a href="advanced-components.html">Graph du mode</a></li>
+								<li><a href="{{ path('admin_average_calories_chart') }}">Graph du mode</a></li>
 							</ul>
 						</li>
 						<li class="dropdown">
