--- a/templates/recettes/indexChef.html.twig
+++ b/templates/recettes/indexChef.html.twig
@@ -1,9 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseChef.html.twig' %}
 
 {% block title %}Recettes index{% endblock %}
 
 {% block body %}
-<link rel="stylesheet" type="text/css" href="{{ asset('bundles/starrating/css/rating.css') }}" />
 <div class="inner-banner inner-bg5">
     <div class="container">
         <div class="inner-title text-center">
@@ -44,23 +43,17 @@
                     <div class="content">
                         <h3><a href="{{ path('app_recettes_show', {'idR': recette.idR}) }}">{{ recette.nom }}</a></h3>
                         <p>{{ recette.description }}</p>
-                        
-                           
-
-                        
+                        <div class="rating">
+                            <i class="bx bxs-star"></i>
+                            <i class="bx bxs-star"></i>
+                            <i class="bx bxs-star"></i>
+                            <i class="bx bxs-star"></i>
+                            <i class="bx bxs-star"></i>
+                        </div>
                         <ul>
                             <li><img src="/assets/images/recipe-img/recipe-user1.jpg" alt="Images"></li>
                             <li><a href="author.html">By {{ recette.chef }}</a></li>
                         </ul>
-
-                        
-                        <div class="content">
-                        <form method="post" action="{{ path('favorite_recipe', {'idR': recette.idR}) }}" >
-                        <input type="hidden" name="_token" value="{{ csrf_token('fav' ~ recette.idR) }}">
-                           <button >Add to Favorites</button>
-                       </form>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -107,49 +100,26 @@
 
         createPaginationLinks();
         paginate(1); 
-
-        /*var buttons = document.querySelectorAll('.btn-add-to-favorites');
-        buttons.forEach(function(button) {
-            button.addEventListener('click', function() {
-                console.log('Button clicked');
-                var recipeId = this.getAttribute('data-recipe-id');
-                console.log(recipeId);
-                var xhr = new XMLHttpRequest();
-                xhr.open('POST', '/' + recipeId + '/favorite');
-                xhr.setRequestHeader('Content-Type', 'application/json');
-                xhr.onload = function() {
-                    if (xhr.status === 200) {
-                        alert('Recipe added to favorites!');
-                    } else {
-                        alert('Failed to add recipe to favorites.');
-                    }
-                };
-                xhr.send();
-            });
-        });*/
     });
 
-    const searchInput = document.getElementById('searchInput');
-    const searchResults = document.getElementById('searchResults');
-    const url = searchInput.getAttribute('data-search-url');
-    searchInput.addEventListener('input', function() {
-        const query = searchInput.value.trim();
-        if (query.length === 0) {
-            searchResults.innerHTML = '';
-            return;
-        }
-        const fullUrl = url + '?query=' + encodeURIComponent(query);
-        fetch(fullUrl)
-            .then(response => response.text())
-            .then(html => {
-                searchResults.innerHTML = html;
-            })
-            .catch(error => console.error('Error fetching search results:', error));
+    document.addEventListener('DOMContentLoaded', function() {
+        const searchInput = document.getElementById('searchInput');
+        const searchResults = document.getElementById('searchResults');
+        const url = searchInput.getAttribute('data-search-url');
+        searchInput.addEventListener('input', function() {
+            const query = searchInput.value.trim();
+            if (query.length === 0) {
+                searchResults.innerHTML = '';
+                return;
+            }
+            const fullUrl = url + '?query=' + encodeURIComponent(query);
+            fetch(fullUrl)
+                .then(response => response.text())
+                .then(html => {
+                    searchResults.innerHTML = html;
+                })
+                .catch(error => console.error('Error fetching search results:', error));
+        });
     });
-    
 </script>
-<!-- Make sure that jQuery is included -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="{{ asset('bundles/starrating/js/rating.js') }}"></script>
-
 {% endblock %}
