--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -13,7 +13,7 @@
 					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li>Cart</li>
+					<li>Panier</li>
 				</ul>
 			</div>
 		</div>
