--- a/templates/commande/new.html.twig
+++ b/templates/commande/new.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	
-
 
 
 	<section class="checkout-area pt-100 pb-70">
@@ -15,7 +13,7 @@
 						</span>
 					</div>
 					<form>
-						<div class="billing-details">
+						<div id="paypal-form" style="display: none;" class="billing-details">
 							<h3 class="title">Billing details</h3>
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
@@ -112,67 +110,165 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</form>
-				</div>
-				<div class="col-lg-4">
-					<div class="billing-sildbar pl-20">
-						{% set subtotal = app.request.query.get('subtotal') %}
-						{% set shipping = app.request.query.get('shipping') %}
-						{% set coupon = app.request.query.get('coupon') %}
-						<div class="billing-totals">
-
-							<h3>Checkout Summary</h3>
-							<ul>
-								<li>Total
-									<span>{{ subtotal ~ "DT" }}</span>
-								</li>
-								<li>Shipping
-									<span>{{ shipping ~ "DT" }}</span>
-								</li>
-								<li>Coupon
-									<span>{{ coupon ~ "DT" }}</span>
-								</li>
-								<li>Total
-									<span>
-										<b>{{ (subtotal + shipping + coupon) ~ "DT" }}</b>
-									</span>
-								</li>
-								<li>Payable Total
-									<span>
-										<b>{{ (subtotal + shipping + coupon) ~ "DT" }}</b>
-									</span>
-								</li>
-							</ul>
-						</div>
-						<div class="payment-box">
-							<div class="payment-method">
-								<h3>Payment Method</h3>
-								<p>
-									<input type="radio" id="direct-bank-transfer" name="radio-group" checked>
-									<label for="direct-bank-transfer">Direct Bank Transfer</label>
-									Make your payment directly into our bank account. Please use your Order
-									ID as the payment reference. Your order will not be shipped until the funds have cleared in our account.
-								</p>
-								<p>
-									<input type="radio" id="paypal" name="radio-group">
-									<label for="paypal">PayPal</label>
-								</p>
-								<p>
-									<input type="radio" id="cash-on-delivery" name="radio-group">
-									<label for="cash-on-delivery">Cash On Delivery</label>
-								</p>
-							</div>
-							<a href="{{ path('app_panier_index')}} " class="default-btn">
+							<a href="{{ path('app_produit_index')}} " class="default-btn">
 								Place to Order
 							</a>
 						</div>
+					</form>
+
+					
+
+						<div id="Card-form" style="display: none;" class="billing-details">
+							<h3 class="title">Billing details</h3>
+
+							<div class="col-4">
+								<div class="card">
+									<div class="card-body">
+										{% for message in app.flashes('success') %}
+											<div style="color: green;
+													                                    border: 2px green solid;
+													                                    text-align: center;
+													                                    padding: 5px;margin-bottom: 10px;">
+												{{ message }}
+											</div>
+										{% endfor %}
+
+										<form id='checkout-form' method='post' action="{{ path('app_stripe_charge') }}">
+											<input type='hidden' name='stripeToken' id='stripe-token-id'>
+											<label for="card-element" class="mb-5">Checkout Forms</label>
+											<br>
+											<div id="card-element" class="form-control"></div>
+											<button id='pay-btn' class="btn btn-success mt-3" type="button" style="margin-top: 20px; width: 100%;padding: 7px;" onclick="createToken()">PAY $5
+											</button>
+											<form></div>
+										</div>
+									</div>
+									<button type="submit" class="default-btn">Submit</button>
+								</div>
+
+							
+						</div>
+						<div class="col-lg-4">
+							<div class="billing-sildbar pl-20">
+								{% set subtotal = app.request.query.get('subtotal') %}
+								{% set shipping = app.request.query.get('shipping') %}
+								{% set coupon = app.request.query.get('coupon') %}
+								<div class="billing-totals">
+
+									<h3>Checkout Summary</h3>
+									<ul>
+										<li>Total
+											<span>{{ subtotal ~ "DT" }}</span>
+										</li>
+										<li>Shipping
+											<span>{{ shipping ~ "DT" }}</span>
+										</li>
+										<li>Coupon
+											<span>{{ coupon ~ "DT" }}</span>
+										</li>
+										<li>Total
+											<span>
+												<b>{{ (subtotal + shipping + coupon) ~ "DT" }}</b>
+											</span>
+										</li>
+										<li>Payable Total
+											<span>
+												<b>{{ (subtotal + shipping + coupon) ~ "DT" }}</b>
+											</span>
+										</li>
+									</ul>
+								</div>
+								<div class="payment-box">
+									<div class="payment-method">
+										<h3>Payment Method</h3>
+										<p>
+											<input type="radio" id="paypal" name="radio-group">
+											<label for="paypal">Cash On Delivery</label>
+											Pour garantir une livraison sans problème, assurez-vous que votre adresse est complète et précise.
+																																																								Vérifiez que vous avez inclus tous les détails nécessaires
+										</p>
+										<p>
+											<input type="radio" id="Card" name="radio-group">
+											<label for="Card">Card</label>
+										</p>
+
+									</div>
+
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</section>
+			</section>
+			<script>
+				document.addEventListener('DOMContentLoaded', function () {
+const paypalRadio = document.getElementById('paypal');
+const paypalForm = document.getElementById('paypal-form');
+const CardRadio = document.getElementById('Card');
+const CardForm = document.getElementById('Card-form');
+
+// Listen for changes to the radio button selection
+document.querySelectorAll('input[name="radio-group"]').forEach(function (radio) {
+radio.addEventListener('change', function () {
+if (paypalRadio.checked) {
+paypalForm.style.display = 'block';
+CardForm.style.display = 'none';
+} else if (CardRadio.checked) {
+CardForm.style.display = 'block';
+paypalForm.style.display = 'none';
+} else {
+CardForm.style.display = 'none';
+paypalForm.style.display = 'none';
+
+}
+});
+});
+});
+
+$(function () {
+$('[data-toggle="popover"]').popover();
+
+$('#cvc').on('click', function () {
+if ($('.cvc-preview-container').hasClass('hide')) {
+$('.cvc-preview-container').removeClass('hide');
+} else {
+$('.cvc-preview-container').addClass('hide');
+}
+});
+
+$('.cvc-preview-container').on('click', function () {
+$(this).addClass('hide');
+});
+});
+			</script>
+			
+				<script src="https://js.stripe.com/v3/"></script>
+				<script>
+					var stripe = Stripe("{{ stripe_key }}");
+var elements = stripe.elements();
+var cardElement = elements.create('card');
+cardElement.mount('#card-element');
+
+function createToken() {
+document.getElementById("pay-btn").disabled = true;
+stripe.createToken(cardElement).then(function (result) {
 
 
-	<a href="{{ path('app_commande_index') }}">back to list</a>
-{% endblock %}
+if (typeof result.error != 'undefined') {
+document.getElementById("pay-btn").disabled = false;
+alert(result.error.message);
+}
+
+// creating token success
+if (typeof result.token != 'undefined') {
+document.getElementById("stripe-token-id").value = result.token.id;
+document.getElementById('checkout-form').submit();
+}
+});
+}
+				
+
+			</script>
+
+			<a href="{{ path('app_commande_index') }}">back to list</a>
+		{% endblock %}
