--- a/templates/produit/_form.html.twig
+++ b/templates/produit/_form.html.twig
@@ -1,83 +1,91 @@
- <div class="main-container">
-        <div class="pd-ltr-20 xs-pd-20-10">
-            <div class="min-height-200px">
-                <div class="page-header">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12">
-                            <div class="title">
-                                <h4>Form</h4>
-                            </div>
-                            <nav aria-label="breadcrumb" role="navigation">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item">
-                                        <a href="index.html">Home</a>
-                                    </li>
-                                    <li class="breadcrumb-item active" aria-current="page">
-                                     products form
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                        <div class="col-md-6 col-sm-12 text-right">
-                            <div class="dropdown">
-                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-                                    January 2018
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="#">Export List</a>
-                                    <a class="dropdown-item" href="#">Policies</a>
-                                    <a class="dropdown-item" href="#">View Assets</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Default Basic Forms Start -->
-                <div class="pd-20 card-box mb-30">
-                    <div class="clearfix">
-                        <div class="pull-left">
-                            <h4 class="text-blue h4">product form</h4>
-                        </div>
-                        <div class="pull-right"></div>
-                    </div>
-                   <form method="post" action="{{ produit.id is defined and produit.id ? path('app_produit_edit', {'id': produit.id}) : path('app_produit_new') }}" enctype="multipart/form-data">
-                        {{ form_start(form) }}
+<div class="main-container">
+	<div class="pd-ltr-20 xs-pd-20-10">
+		<div class="min-height-200px">
+			<div class="page-header">
 
-                        <div class="form-group row">
-                            <label class="col-sm-12 col-md-2 col-form-label">Nom</label>
-                            <div class="col-sm-12 col-md-10">
-                                {{ form_widget(form.nom, { 'attr': {'class': 'form-control', 'placeholder': 'nom produit'} }) }}
-                            </div>
-                        </div>
+				<div class="row">
+					<div class="col-md-6 col-sm-12">
+						<div class="title">
+							<h4>Form</h4>
+						</div>
+						<nav aria-label="breadcrumb" role="navigation">
+							<ol class="breadcrumb">
+								<li class="breadcrumb-item">
+									<a href="index.html">Home</a>
+								</li>
+								<li class="breadcrumb-item active" aria-current="page">
+									produit form
+								</li>
+							</ol>
+						</nav>
+					</div>
+					<div class="col-md-6 col-sm-12 text-right">
+						<div class="dropdown">
+							<a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+								January 2018
+							</a>
+							<div class="dropdown-menu dropdown-menu-right">
+								<a class="dropdown-item" href="#">Export List</a>
+								<a class="dropdown-item" href="#">Policies</a>
+								<a class="dropdown-item" href="#">View Assets</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Default Basic Forms Start -->
+			<div class="pd-20 card-box mb-30">
+				<div class="clearfix">
+					<div class="pull-left">
+						<h4 class="text-blue h4">product form</h4>
+					</div>
+					<div class="pull-right"></div>
+				</div>
+				<form method="post" action="{{ produit.id is defined and produit.id ? path('app_produit_edit', {'id': produit.id}) : path('app_produit_new') }}" enctype="multipart/form-data">
+					{{ form_start(form) }}
 
-                        <div class="form-group row">
-                            <label class="col-sm-12 col-md-2 col-form-label">Prix</label>
-                            <div class="col-sm-12 col-md-10">
-                                {{ form_widget(form.prix, { 'attr': {'class': 'form-control', 'placeholder': '100 dt', 'type': 'number'} }) }}
-                            </div>
-                        </div>
+					<div class="form-group row">
+						<label class="col-sm-12 col-md-2 col-form-label">Nom</label>
+						<div class="col-sm-12 col-md-10">
+							{{ form_widget(form.nom, { 'attr': {'class': 'form-control' ~ (form_errors(form.nom)|length ? ' error' :(form.nom.vars.valid ? ' success' : '')), 'placeholder': 'nom produit'} }) }}
+							<span class="error-message">{{ form_errors(form.nom) }}</span>
+						</div>
 
-                        <div class="form-group row">
-                            <label class="col-sm-12 col-md-2 col-form-label">Description</label>
-                            <div class="col-sm-12 col-md-10">
-                                {{ form_widget(form.diescription, { 'attr': {'class': 'form-control', 'description': 'Enter description'} }) }}
-                            </div>
-                        </div>
+					</div>
 
-                        <div class="form-group">
-                            <label>Image</label>
-                            {{ form_widget(form.imageFile, { 'attr': { 'class': 'form-control-file form-control height-auto', 'placeholder':'select image'} }) }}
-                            <span id="image-file-name"></span>
-                        </div>
+					<div class="form-group row">
+						<label class="col-sm-12 col-md-2 col-form-label">Prix</label>
+						<div class="col-sm-12 col-md-10">
+							{{ form_widget(form.prix, { 'attr': {'class': 'form-control' ~ (form_errors(form.prix)|length ? ' error' : (form.prix.vars.valid ? ' success' : '')), 'placeholder': '100 dt', 'type': 'number'} }) }}
+							<span class="error-message">{{ form_errors(form.prix) }}</span>
+						</div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
 
-                        {{ form_end(form) }}
-                    </form>
-                </div>
-                <!-- Default Basic Forms End -->
+					</div>
 
-                <a href="{{ path('app_produit_index') }}">back to list</a>
-            </div>
-        </div>
-    </div>
+					<div class="form-group row">
+						<label class="col-sm-12 col-md-2 col-form-label">Description</label>
+						<div class="col-sm-12 col-md-10">
+							{{ form_widget(form.diescription, { 'attr': {'class': 'form-control' ~ (form_errors(form.diescription)|length ? ' error' : (form.diescription.vars.valid ? ' success' : '')), 'description': 'Enter description'} }) }}
+							<span class="error-message">{{ form_errors(form.diescription) }}</span>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-12 col-md-2 col-form-label">Image</label>
+						{{ form_widget(form.imageFile, { 'attr': { 'class': 'form-control-file form-control height-auto' ~ (form_errors(form.imageFile)|length ? ' error' : (form.imageFile.vars.valid ? ' success' : '')), 'placeholder':'select image'} }) }}
+						<span class="error-message">{{ form_errors(form.imageFile) }}</span>
+						<span id="image-file-name"></span>
+					</div>
+
+					<button type="submit" class="btn btn-primary">Submit</button>
+
+					{{ form_end(form) }}
+				</form>
+			</div>
+			<!-- Default Basic Forms End -->
+
+			<a href="{{ path('app_produit_index') }}">back to list</a>
+		</div>
+	</div>
+</div>
