comment create functionality + UI

--- a/templates/article/post_details.html.twig
+++ b/templates/article/post_details.html.twig
@@ -63,7 +63,7 @@
 							</ul>
 						</div>
 						<div class="comments-form">
-							{{ include('commentaire/newComment.html.twig') }}
+							{{ include('commentaire/new.html.twig') }}
 						</div>
 					</div>
 				</div>
