--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -150,6 +150,11 @@
 								<i class="bx bx-chevron-down"></i>
 							</a>
 							<ul class="dropdown-menu">
+							<li class="nav-item">
+									<a href="{{ path('app_recettes_new') }}" class="nav-link">
+										 ajouter une Recette 
+									</a>
+								</li>
 								<li class="nav-item">
 									<a href="404.html" class="nav-link">
 										Recette Favorie
