--- a/templates/recettes/_form.html.twig
+++ b/templates/recettes/_form.html.twig
@@ -18,14 +18,14 @@
 				<div class="col-lg-12">
 					<div class="form-group">
 						{{ form_label(form.chef, 'Chef') }}
-						{{ form_widget(form.chef, {'attr': {'class': 'form-control','nonvalidate ':'nonvalidate' , 'placeholder': 'Nom chef', 'required': 'required'}}) }}
+						{{ form_widget(form.chef, {'attr': {'class': 'form-control','nonvalidate ':'nonvalidate' , 'placeholder': 'Nom chef'}}) }}
 						{{ form_errors(form.chef) }}
 					</div>
 				</div>
 				<div class="col-lg-12">
 					<div class="form-group">
 						{{ form_label(form.ingredients, 'Ingredients') }}
-						{{ form_widget(form.ingredients, {'attr': {'class': 'form-select form-control', 'required': 'required'}}) }}
+						{{ form_widget(form.ingredients, {'attr': {'class': 'form-select form-control'}}) }}
 					</div>
 				</div>
 				<div class="col-lg-12">
@@ -36,34 +36,34 @@
 				<div class="col-lg-12">
 					<div class="form-group">
 						{{ form_label(form.description, 'Description') }}
-						{{ form_widget(form.description, {'attr': {'class': 'form-control','nonvalidate ':'nonvalidate' , 'placeholder': 'Description', 'required': 'required' ,'rows': '5'}}) }}
+						{{ form_widget(form.description, {'attr': {'class': 'form-control','nonvalidate ':'nonvalidate' , 'placeholder': 'Description' ,'rows': '5'}}) }}
 						{{ form_errors(form.description) }}
 					</div>
 				</div>
 				<div class="col-lg-12">
 					<div class="form-group">
 						{{ form_label(form.imgsrc, 'image') }}
-						{{ form_widget(form.imgsrc, {'attr': {'class': 'form-control ', 'placeholder': 'Ajouter une image', 'required': 'required'}}) }}
+						{{ form_widget(form.imgsrc, {'attr': {'class': 'form-control ', 'placeholder': 'Ajouter une image'}}) }}
 						{{ form_errors(form.imgsrc) }}
 					</div>
 					<div class="col-lg-12">
 						<div class="form-group">
 							{{ form_label(form.categorie, 'Categorie') }}
-							{{ form_widget(form.categorie, {'attr': {'class': 'form-select form-control','nonvalidate ':'nonvalidate' , 'required': 'required'}}) }}
+							{{ form_widget(form.categorie, {'attr': {'class': 'form-select form-control','nonvalidate ':'nonvalidate' }}) }}
 							{{ form_errors(form.categorie) }}
 						</div>
 					</div>
 					<div class="col-lg-6">
 						<div class="form-group">
 							{{ form_label(form.calorie, 'Calorie') }}
-							{{ form_widget(form.calorie, {'attr': {'class': 'form-control ','nonvalidate ':'nonvalidate' , 'placeholder': 'Calorie', 'required': 'required'}}) }}
+							{{ form_widget(form.calorie, {'attr': {'class': 'form-control ','nonvalidate ':'nonvalidate' , 'placeholder': 'Calorie'}}) }}
 							{{ form_errors(form.calorie) }}
 						</div>
 					</div>
 					<div class="col-lg-6">
 						<div class="form-group">
 							{{ form_label(form.protein, 'Protein') }}
-							{{ form_widget(form.protein, {'attr': {'class': 'form-control ','nonvalidate ':'nonvalidate' , 'placeholder': 'Protein', 'required': 'required'}}) }}
+							{{ form_widget(form.protein, {'attr': {'class': 'form-control ','nonvalidate ':'nonvalidate' , 'placeholder': 'Protein'}}) }}
 							{{ form_errors(form.protein) }}
 						</div>
 						{# {# <div class="col-lg-6">
