--- a/templates/recettes/show.html.twig
+++ b/templates/recettes/show.html.twig
@@ -3,6 +3,16 @@
 {% block title %}Recettes{% endblock %}
 
 {% block body %}
+<head>
+    <meta charset="utf-8" />
+    <title>Rating Recette</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
 <div class="recipe-details-area pt-100 pb-70">
     <div class="container">
         <div class="row">
@@ -160,7 +170,139 @@
             </div>
         </div>
     </div>
+     <div class="container">
+        <h1 class="mt-5 mb-5">Rating Recette</h1>
+        <div class="card">
+            <div class="card-header">Recettes</div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <h1 class="text-warning mt-4 mb-4">
+                            <b><span id="average_rating">0.0</span> / 5</b>
+                        </h1>
+                        <div class="mb-3">
+                            <i class="fas fa-star star-light mr-1 main_star"></i>
+                            <i class="fas fa-star star-light mr-1 main_star"></i>
+                            <i class="fas fa-star star-light mr-1 main_star"></i>
+                            <i class="fas fa-star star-light mr-1 main_star"></i>
+                            <i class="fas fa-star star-light mr-1 main_star"></i>
+	    				</div>
+                        <h3><span id="total_review">0</span> Review</h3>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>
+                            <div class="progress-label-left"><b>5</b> <i class="fas fa-star text-warning"></i></div>
+                            <div class="progress-label-right">(<span id="total_five_star_review">0</span>)</div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="five_star_progress"></div>
+                            </div>
+                        </p>
+                        <!-- Progress bars for other star ratings -->
+                        <p>
+                            <div class="progress-label-left"><b>4</b> <i class="fas fa-star text-warning"></i></div>
+                            <div class="progress-label-right">(<span id="total_four_star_review">0</span>)</div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="four_star_progress"></div>
+                            </div>
+                        </p>
+                        <p>
+                            <div class="progress-label-left"><b>3</b> <i class="fas fa-star text-warning"></i></div>
+                            <div class="progress-label-right">(<span id="total_three_star_review">0</span>)</div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="three_star_progress"></div>
+                            </div>
+                        </p>
+                        <p>
+                            <div class="progress-label-left"><b>2</b> <i class="fas fa-star text-warning"></i></div>
+                            <div class="progress-label-right">(<span id="total_two_star_review">0</span>)</div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="two_star_progress"></div>
+                            </div>
+                        </p>
+                        <p>
+                            <div class="progress-label-left"><b>1</b> <i class="fas fa-star text-warning"></i></div>
+                            <div class="progress-label-right">(<span id="total_one_star_review">0</span>)</div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="one_star_progress"></div>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+ var rating_data = 0;
+
+$(document).on('mouseenter', '.main_star', function(){
+    var rating = $(this).index() + 1;
+    reset_background();
+    for(var count = 1; count <= rating; count++) {
+        $('.main_star:eq(' + (count - 1) + ')').addClass('text-warning');
+    }
+});
+
+function reset_background() {
+    $('.main_star').removeClass('text-warning');
+}
+
+$(document).on('click', '.main_star', function(){
+    rating_data = $(this).index() + 1;
+    console.log("Selected rating: " + rating_data);
+    var recipeId = {{ recette.idR }}; 
+    submitRatingToServer(recipeId, rating_data);
+  
+});
+
+function submitRatingToServer(recipeId, rating) {
+    $.ajax({
+        url: "{{ path('submit_rating') }}",
+        method: "POST",
+        data: {recette_id: recipeId, rating_data: rating},
+        success: function(data) {
+            console.log("Rating submitted successfully!");
+              load_rating_data(recipeId) ;
+        },
+        error: function(xhr, status, error) {
+            console.error("Error submitting rating:", error);
+        }
+    });
+}
+
+function load_rating_data(recipeId) {
+    $.ajax({
+        url: "{{ path('load_rating_data') }}",
+        method: "POST",
+        data: {recette_id: recipeId, action: 'load_data'}, // Pass recipeId here
+        dataType: "JSON",
+        success: function(data) {
+            console.log("Received data:", data);
+
+            // Update the DOM elements with rating data
+            $('#average_rating').text(data.average_rating);
+            $('#total_review').text(data.total_review);
+            $('#total_five_star_review').text(data.total_five_star_review);
+            $('#total_four_star_review').text(data.total_four_star_review);
+            $('#total_three_star_review').text(data.total_three_star_review);
+            $('#total_two_star_review').text(data.total_two_star_review);
+            $('#total_one_star_review').text(data.total_one_star_review);
+
+            // Update progress bars
+            $('#five_star_progress').css('width', data.five_star_progress + '%');
+            $('#four_star_progress').css('width', data.four_star_progress + '%');
+            $('#three_star_progress').css('width', data.three_star_progress + '%');
+            $('#two_star_progress').css('width', data.two_star_progress + '%');
+            $('#one_star_progress').css('width', data.one_star_progress + '%');
+        },
+        error: function(xhr, status, error) {
+            console.error("Error loading rating data:", error);
+        }
+    });
+}
+
+</script>
 
     
 
