--- a/templates/security/user/login.html.twig
+++ b/templates/security/user/login.html.twig
@@ -50,7 +50,7 @@
 <div class="agree-label">
 <input type="checkbox" id="chb1">
 <label for="chb1">
-Remember Me <a class="forget" href="forgot-password.html">Forgot My Password?</a>
+Remember Me <a class="forget" href="{{ path('app_login') }}">Forgot My Password?</a>
 </label>
 </div>
 </div>
