--- a/templates/adresse/new.html.twig
+++ b/templates/adresse/new.html.twig
@@ -67,9 +67,7 @@
 				</div>
 			</div>
 			<script>
-				var map = L.map('mapid').setView([
-0, 0
-], 13);
+				var map = L.map('mapid').setView([10, 10], 13);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; OpenStreetMap contributors'}).addTo(map);
 
