--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -162,7 +162,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="coming-soon.html" class="nav-link">
+									<a href="{{ path('app_chef') }}"  class="nav-link">
 										Nos Chefs
 									</a>
 								</li>
@@ -249,11 +249,7 @@
 								</li>
 							</ul>
 						</li>
-						<li class="nav-item">
-							<a href="contact.html" class="nav-link">
-								Contact Us
-							</a>
-						</li>
+						
 					</ul>
 					<div class="others-options d-flex align-items-center">
 						<div class="optional-item">
