--- a/templates/user/ChefHome.html.twig
+++ b/templates/user/ChefHome.html.twig
@@ -1,5 +1,6 @@
 {% extends 'chefbase.html.twig' %}
 
 {% block body %}
-   <h3>ahla chef</h3>
+   <h3>bienvenue chef</h3>
+   <a href="{{ path('app_user_edit', {'idu': app.user.id}) }}">Edit Profile</a>
 {% endblock %}
