--- a/templates/user/ClientHome.html.twig
+++ b/templates/user/ClientHome.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-   <h3>ahla khouya</h3>
+   <h3>bienvenue cher client</h3>
+      <a href="{{ path('app_user_edit', {'idu': app.user.getIdu()}) }}">Edit Profile</a>
+
 {% endblock %}
