--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,100 @@
-{% extends 'baseback.html.twig' %}
-
-{% block title %}Edit User{% endblock %}
+{% extends 'WelcomeBase.html.twig' %}
 
 {% block body %}
-    <h1>Edit User</h1>
+<div class="inner-banner inner-bg9">
+    <div class="container">
+        <div class="inner-title text-center">
+            <h3>Edit User</h3>
+            <ul>
+                <li><a href="{{ path('Welcome') }}" >Home</a></li>
+                <li>Edit</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+<div class="user-area pt-100 pb-70">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <div class="user-all-form">
+                    <div class="contact-form">
+                        <h3>Modifier vos données</h3>
+                        
+                        {{ form_start(userForm, {'attr': {'enctype': 'multipart/form-data'}}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+                        {{ form_widget(userForm._token) }}
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_row(userForm.nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom'}}) }}
+                                    {{ form_errors(userForm.nom, {'attr': {'class': 'text-danger'}}) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_row(userForm.prenom, {'attr': {'class': 'form-control', 'placeholder': 'Prénom'}}) }}
+                                    {{ form_errors(userForm.prenom, {'attr': {'class': 'text-danger'}}) }}
+                                </div>
+                            </div>
+                             <div class="col-lg-6">
+        <div class="form-group">
+            {{ form_row(userForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
+            {{ form_errors(userForm.email, {'attr': {'class': 'text-danger'}}) }}
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="form-group">
+           {{ form_row(userForm.role) }}
+           {{ form_errors(userForm.role, {'attr': {'class': 'text-danger'}}) }}
+        </div>
+    </div>
+                              
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_row(userForm.mdp, {'attr': {'class': 'form-control', 'placeholder': 'Password', 'type': 'hidden'}}) }}
+                                    {{ form_errors(userForm.mdp, {'attr': {'class': 'text-danger'}}) }}
+                                    
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_row(userForm.tel, {'attr': {'class': 'form-control', 'placeholder': 'Téléphone'}}) }}
+                                   {{ form_errors(userForm.tel, {'attr': {'class': 'text-danger'}}) }}
+                                </div>
+                            </div>
+                               
+                                 
+                               
+                            
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    {{ form_row(userForm.image, {'attr': {'class': 'form-control', 'placeholder': 'Image'}}) }}
+                                    {{ form_errors(userForm.image, {'attr': {'class': 'text-danger'}}) }}
+                                </div>
+                            </div>
+                        </div>
+                    
 
-    {{ include('user/_delete_form.html.twig') }}
+
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12">
+                            <!-- Bouton pour soumettre le formulaire -->
+                            <div class="col-lg-12 col-md-12 text-center d-flex justify-content-center">
+                                <button type="submit" class="default-btn">
+                                   Modifier 
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    {{ form_end(userForm) }}
+                
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 {% endblock %}
