--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminBase.html.twig' %}
 
 {% block title %}New User{% endblock %}
 
@@ -6,5 +6,4 @@
     <h1>Create new User</h1>
     {{ include('user/_form.html.twig') }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
 {% endblock %}
