--- a/templates/defis_admin/index.html.twig
+++ b/templates/defis_admin/index.html.twig
@@ -46,4 +46,7 @@
         </div>
     </div>
 </div>
+<div class="text-center">
+    <a href="{{ path('app_defis_calender_admin') }}" class="btn btn-success"  style="background-color: #0e1125; color: white; border-color: #0e1125 ">Calendrier</a>
+</div>
 {% endblock %}
